all articles tests passing, still need to do other TODOS and figure out what a standard error for findall and findavailable means